tests/compile-fail/serde_core_without_marker.stderr
error[E0277]: the trait bound `[u8; 32]: SerializableType` is not satisfied
 --> tests/compile-fail/serde_core_without_marker.rs:9:35
  |
9 |     let _ = serde_json::to_string(&fixed);
  |             --------------------- ^^^^^^ the trait `SerializableType` is not implemented for `[u8; 32]`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `serde_core::ser::Serialize` is implemented for `Fixed<T>`
  = note: required for `Fixed<[u8; 32]>` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-$VERSION/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`
